[package]
name = "software-dev-interview"
version = "0.1.0"
edition = "2024"

[dependencies]
udp-stream = "0.0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "sync", "net", "time"] }
bytes = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.6.0", features = ["derive"] }
